all functions appear to be working
